--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link data-require="bootstrap-css@3.3.6" data-semver="3.3.6" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" />
+  <script type="text/javascript" src="../node_modules/auth0-js/build/auth0.js"></script>
+  <script src="https://cdn.auth0.com/js/auth0/9.10.0/auth0.min.js"></script>
+
 </head>
 <body>
   <app-root></app-root>
